--- a/docs/custom-flows/email-password.mdx
+++ b/docs/custom-flows/email-password.mdx
@@ -34,8 +34,112 @@ A successful sign-up consists of the following steps:
 <Tabs items={["Next.js","React","Remix", "Gatsby", "Expo", "JavaScript"]}>
 
 <Tab>
-<CodeBlockTabs options={['Pages Router', 'App Router']}>
+<CodeBlockTabs options={['App Router', 'Pages Router']}>
+```tsx filename="app/sign-up/[[...sign-up]]/page.tsx
+'use client'
+
+import * as React from 'react';
+import { useSignUp } from '@clerk/nextjs';
+import { useRouter } from 'next/navigation';
+import { ClerkAPIErrorJSON } from '@clerk/types';
+
+export default function Page() {
+  const { isLoaded, signUp, setActive } = useSignUp();
+  const [emailAddress, setEmailAddress] = React.useState("");
+  const [password, setPassword] = React.useState("");
+  const [verifying, setVerifying] = React.useState(false);
+  const [code, setCode] = React.useState("");
+  const router = useRouter();
+
+  // This function will handle the user submitting their email and password
+  const handleSubmit = async (e: React.FormEvent) => {
+    e.preventDefault();
+    if (!isLoaded) return;
+    
+    // Start the sign-up process using the email and password provided
+    try {
+      await signUp.create({
+        emailAddress, password
+      });
+
+      // Send the user an email with the verification code
+      await signUp.prepareEmailAddressVerification({
+        strategy: 'email_code'
+      });
+
+      // Set 'verifying' true to display second form and capture the OTP code
+      setVerifying(true);
+    }
+    catch (err: any) {
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
+      console.error('Error:', JSON.stringify(err, null, 2));
+    }
+  }
+
+  // This function will handle the user submitting a code for verification
+  const handleVerify = async (e: React.FormEvent) => {
+    e.preventDefault();
+    if (!isLoaded) return;
+
+    try {
+      // Submit the code that the user provides to attempt verification
+      const completeSignUp = await signUp.attemptEmailAddressVerification({
+        code
+      });
+
+      if (completeSignUp.status !== "complete") {
+        // The status can also be `abandoned` or `missing_requirements`
+        // Please see https://clerk.com/docs/references/react/use-sign-up#result-status for  more information
+        console.log(JSON.stringify(completeSignUp, null, 2));
+      }
+
+      // Check the status to see if it is complete
+      // If complete, the user has been created -- set the session active
+      if (completeSignUp.status === "complete") {
+        await setActive({ session: completeSignUp.createdSessionId });
+        // Redirect the user to a post sign-up route
+        router.push("/");
+      }
+    }
+    catch (err: any) {
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
+      console.error('Error:', JSON.stringify(err, null, 2));
+    }
+  }
+
+  // Once the sign-up form was submitted, verifying was set to true and as a result, this verification form is presented to the user to input their verification code.
+  if (verifying) {
+    return (
+      <form onSubmit={handleVerify}>
+        <label id="code">Code</label>
+        <input value={code} id="code" name="code" onChange={(e) => setCode(e.target.value)} />
+        <button type="submit">Complete Sign Up</button>
+      </form>
+    )
+  }
+  
+  // Display the initial sign-up form to capture the email and password
+  return (
+    <form onSubmit={handleSubmit}>
+      <div>
+        <label htmlFor="email">Email address</label>
+        <input id="email" type='email' name="email" value={emailAddress} onChange={(e) => setEmailAddress(e.target.value)} />
+      </div>
+      <div>
+        <label className="block text-sm mt-8" htmlFor="password">Password</label>
+        <input id="password" type='password' name="password" value={password} onChange={(e) => setPassword(e.target.value)} />
+      </div>
+      <div>
+        <button type="submit">Verify Email</button>
+      </div>
+    </form>
+  );
+}
+```
 ```tsx filename="pages/sign-up/[[...index]].tsx"
+
 import { useState } from "react";
 import { useSignUp } from "@clerk/nextjs";
 import { useRouter } from "next/router";
@@ -47,30 +151,34 @@ export default function SignUpForm() {
   const [pendingVerification, setPendingVerification] = useState(false);
   const [code, setCode] = useState("");
   const router = useRouter();
-  // start the sign up process.
+
+  // This function will handle the user submitting their email and password
   const handleSubmit = async (e) => {
     e.preventDefault();
     if (!isLoaded) {
       return;
     }
 
+    // Start the sign-up process using the email and password provided
     try {
       await signUp.create({
         emailAddress,
         password,
       });
 
-      // send the email.
+      // Send the user an email with the verification code
       await signUp.prepareEmailAddressVerification({ strategy: "email_code" });
 
-      // change the UI to our pending section.
+      // Set 'verifying' true to display second form and capture the OTP code
       setPendingVerification(true);
-    } catch (err: any) {
+    } catch (err: any) {      
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
       console.error(JSON.stringify(err, null, 2));
     }
   };
 
-  // This verifies the user using email code that is delivered.
+  // This function will handle the user submitting a code for verification
   const onPressVerify = async (e) => {
     e.preventDefault();
     if (!isLoaded) {
@@ -78,113 +186,27 @@ export default function SignUpForm() {
     }
 
     try {
+      // Submit the code that the user provides to attempt verification
       const completeSignUp = await signUp.attemptEmailAddressVerification({
         code,
       });
+
       if (completeSignUp.status !== "complete") {
-        /*  investigate the response, to see if there was an error
-         or if the user needs to complete more steps.*/
+        // The status can also be `abandoned` or `missing_requirements`
+        // Please see https://clerk.com/docs/references/react/use-sign-up#result-status for  more information
         console.log(JSON.stringify(completeSignUp, null, 2));
       }
+
+      // Check the status to see if it is complete
+      // If complete, the user has been created -- set the session active
       if (completeSignUp.status === "complete") {
         await setActive({ session: completeSignUp.createdSessionId })
+        // Redirect the user to a post sign-up route
         router.push("/");
       }
-    } catch (err: any) {
-      console.error(JSON.stringify(err, null, 2));
-    }
-  };
-
-  return (
-    <div>
-      {!pendingVerification && (
-        <form>
-          <div>
-            <label htmlFor="email">Email</label>
-            <input onChange={(e) => setEmailAddress(e.target.value)} id="email" name="email" type="email" />
-          </div>
-          <div>
-            <label htmlFor="password">Password</label>
-            <input onChange={(e) => setPassword(e.target.value)} id="password" name="password" type="password" />
-          </div>
-          <button onClick={handleSubmit}>Sign up</button>
-        </form>
-      )}
-      {pendingVerification && (
-        <div>
-          <form>
-            <input
-              value={code}
-              placeholder="Code..."
-              onChange={(e) => setCode(e.target.value)}
-            />
-            <button onClick={onPressVerify}>
-              Verify Email
-            </button>
-          </form>
-        </div>
-      )}
-    </div>
-  );
-}
-```
-```tsx filename="app/sign-up/[[...sign-up]].page.tsx"
-"use client"
-import { useState } from "react";
-import { useSignUp } from "@clerk/nextjs";
-import { useRouter } from "next/navigation";
-
-export default function SignUpForm() {
-  const { isLoaded, signUp, setActive } = useSignUp();
-  const [emailAddress, setEmailAddress] = useState("");
-  const [password, setPassword] = useState("");
-  const [pendingVerification, setPendingVerification] = useState(false);
-  const [code, setCode] = useState("");
-  const router = useRouter();
-  // start the sign up process.
-  const handleSubmit = async (e) => {
-    e.preventDefault();
-    if (!isLoaded) {
-      return;
-    }
-
-    try {
-      await signUp.create({
-        emailAddress,
-        password,
-      });
-
-      // send the email.
-      await signUp.prepareEmailAddressVerification({ strategy: "email_code" });
-
-      // change the UI to our pending section.
-      setPendingVerification(true);
-    } catch (err: any) {
-      console.error(JSON.stringify(err, null, 2));
-    }
-  };
-
-  // This verifies the user using email code that is delivered.
-  const onPressVerify = async (e) => {
-    e.preventDefault();
-    if (!isLoaded) {
-      return;
-    }
-
-    try {
-      const completeSignUp = await signUp.attemptEmailAddressVerification({
-        code,
-      });
-      if (completeSignUp.status !== "complete") {
-        /*  investigate the response, to see if there was an error
-         or if the user needs to complete more steps.*/
-        console.log(JSON.stringify(completeSignUp, null, 2));
-      }
-      if (completeSignUp.status === "complete") {
-        await setActive({ session: completeSignUp.createdSessionId })
-        router.push("/");
-      }
-    } catch (err: any) {
+    } catch (err: any) {      
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
       console.error(JSON.stringify(err, null, 2));
     }
   };
@@ -234,58 +256,70 @@ export default function SignUpForm() {
   const { isLoaded, signUp, setActive } = useSignUp();
   const [emailAddress, setEmailAddress] = useState("");
   const [password, setPassword] = useState("");
-  const [pendingVerification, setPendingVerification] = useState(false);
+  const [verifying, setVerifying] = React.useState(false);
   const [code, setCode] = useState("");
-  // start the sign up process.
+
+  // This function will handle the user submitting their email and password
   const handleSubmit = async (e) => {
     e.preventDefault();
     if (!isLoaded) {
       return;
     }
 
+    // Start the sign-up process using the email and password provided
     try {
       await signUp.create({
         emailAddress,
         password,
       });
 
-      // send the email.
+      // Send the user an email with the verification code
       await signUp.prepareEmailAddressVerification({ strategy: "email_code" });
 
-      // change the UI to our pending section.
-      setPendingVerification(true);
+      // Set 'verifying' true to display second form and capture the OTP code
+      setVerifying(true);
     } catch (err: any) {
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
       console.error(JSON.stringify(err, null, 2));
     }
   };
 
-  // This verifies the user using email code that is delivered.
-  const onPressVerify = async (e) => {
+  // This function will handle the user submitting a code for verification
+  const handleVerify = async (e) => {
     e.preventDefault();
     if (!isLoaded) {
       return;
     }
 
     try {
+      // Submit the code that the user provides to attempt verification
       const completeSignUp = await signUp.attemptEmailAddressVerification({
         code,
       });
+
       if (completeSignUp.status !== "complete") {
-        /*  investigate the response, to see if there was an error
-         or if the user needs to complete more steps.*/
+        // The status can also be `abandoned` or `missing_requirements`
+        // Please see https://clerk.com/docs/references/react/use-sign-up#result-status for  more information
         console.log(JSON.stringify(completeSignUp, null, 2));
       }
+
+      // Check the status to see if it is complete
+      // If complete, the user has been created -- set the session active
       if (completeSignUp.status === "complete") {
         await setActive({ session: completeSignUp.createdSessionId })
+        // Handle your own logic here, like redirecting to a new page if needed.
       }
     } catch (err: any) {
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
       console.error(JSON.stringify(err, null, 2));
     }
   };
 
   return (
     <div>
-      {!pendingVerification && (
+      {!verifying && (
         <form>
           <div>
             <label htmlFor="email">Email</label>
@@ -298,7 +332,7 @@ export default function SignUpForm() {
           <button onClick={handleSubmit}>Sign up</button>
         </form>
       )}
-      {pendingVerification && (
+      {verifying && (
         <div>
           <form>
             <input
@@ -306,7 +340,7 @@ export default function SignUpForm() {
               placeholder="Code..."
               onChange={(e) => setCode(e.target.value)}
             />
-            <button onClick={onPressVerify}>
+            <button onClick={handleVerify}>
               Verify Email
             </button>
           </form>
@@ -327,59 +361,71 @@ export default function SignUpForm() {
   const { isLoaded, signUp, setActive } = useSignUp();
   const [emailAddress, setEmailAddress] = useState("");
   const [password, setPassword] = useState("");
-  const [pendingVerification, setPendingVerification] = useState(false);
+  const [verifying, setVerifying] = React.useState(false);
   const [code, setCode] = useState("");
-  // start the sign up process.
+ 
+  // This function will handle the user submitting their email and password
   const handleSubmit = async (e) => {
     e.preventDefault();
     if (!isLoaded) {
       return;
     }
 
+    // Start the sign-up process using the email and password provided
     try {
       await signUp.create({
         emailAddress,
         password,
       });
 
-      // send the email.
+      // Send the user an email with the verification code
       await signUp.prepareEmailAddressVerification({ strategy: "email_code" });
 
-      // change the UI to our pending section.
-      setPendingVerification(true);
+      // Set 'verifying' true to display second form and capture the OTP code
+      setVerifying(true);
     } catch (err: any) {
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
       console.error(JSON.stringify(err, null, 2));
     }
   };
 
-  // This verifies the user using email code that is delivered.
-  const onPressVerify = async (e) => {
+  // This function will handle the user submitting a code for verification
+  const handleVerify = async (e) => {
     e.preventDefault();
     if (!isLoaded) {
       return;
     }
 
     try {
+      // Submit the code that the user provides to attempt verification
       const completeSignUp = await signUp.attemptEmailAddressVerification({
         code,
       });
+
       if (completeSignUp.status !== "complete") {
-        /*  investigate the response, to see if there was an error
+        // The status can also be `abandoned` or `missing_requirements`
+        // Please see https://clerk.com/docs/references/react/use-sign-up#result-status for  more information
          or if the user needs to complete more steps.*/
         console.log(JSON.stringify(completeSignUp, null, 2));
       }
+
+      // Check the status to see if it is complete
+      // If complete, the user has been created -- set the session active
       if (completeSignUp.status === "complete") {
         await setActive({ session: completeSignUp.createdSessionId })
         // Handle your own logic here, like redirecting to a new page if needed.
       }
     } catch (err: any) {
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
       console.error(JSON.stringify(err, null, 2));
     }
   };
 
   return (
     <div>
-      {!pendingVerification && (
+      {!verifying && (
         <form>
           <div>
             <label htmlFor="email">Email</label>
@@ -392,7 +438,7 @@ export default function SignUpForm() {
           <button onClick={handleSubmit}>Sign up</button>
         </form>
       )}
-      {pendingVerification && (
+      {verifying && (
         <div>
           <form>
             <input
@@ -400,7 +446,7 @@ export default function SignUpForm() {
               placeholder="Code..."
               onChange={(e) => setCode(e.target.value)}
             />
-            <button onClick={onPressVerify}>
+            <button onClick={handleVerify}>
               Verify Email
             </button>
           </form>
@@ -423,60 +469,72 @@ export default function SignUpForm() {
   const { isLoaded, signUp, setActive } = useSignUp();
   const [emailAddress, setEmailAddress] = useState("");
   const [password, setPassword] = useState("");
-  const [pendingVerification, setPendingVerification] = useState(false);
+  const [verifying, setVerifying] = React.useState(false);
   const [code, setCode] = useState("");
   const router = useRouter();
-  // start the sign up process.
+  
+  // This function will handle the user submitting their email and password
   const handleSubmit = async (e) => {
     e.preventDefault();
     if (!isLoaded) {
       return;
     }
 
+    // Start the sign-up process using the email and password provided
     try {
       await signUp.create({
         emailAddress,
         password,
       });
 
-      // send the email.
+      // Send the user an email with the verification code
       await signUp.prepareEmailAddressVerification({ strategy: "email_code" });
 
-      // change the UI to our pending section.
-      setPendingVerification(true);
+      // Set 'verifying' true to display second form and capture the OTP code
+      setVerifying(true);
     } catch (err: any) {
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
       console.error(JSON.stringify(err, null, 2));
     }
   };
 
-  // This verifies the user using email code that is delivered.
-  const onPressVerify = async (e) => {
+  // This function will handle the user submitting a code for verification
+  const handleVerify = async (e) => {
     e.preventDefault();
     if (!isLoaded) {
       return;
     }
 
     try {
+      // Submit the code that the user provides to attempt verification
       const completeSignUp = await signUp.attemptEmailAddressVerification({
         code,
       });
+
       if (completeSignUp.status !== "complete") {
-        /*  investigate the response, to see if there was an error
-         or if the user needs to complete more steps.*/
+        // The status can also be `abandoned` or `missing_requirements`
+        // Please see https://clerk.com/docs/references/react/use-sign-up#result-status for  more information
         console.log(JSON.stringify(completeSignUp, null, 2));
       }
+
+      // Check the status to see if it is complete
+      // If complete, the user has been created -- set the session active
       if (completeSignUp.status === "complete") {
         await setActive({ session: completeSignUp.createdSessionId })
+        // Redirect the user to a post sign-up route
         router.push("/");
       }
     } catch (err: any) {
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
       console.error(JSON.stringify(err, null, 2));
     }
   };
 
   return (
     <div>
-      {!pendingVerification && (
+      {!verifying && (
         <form>
           <div>
             <label htmlFor="email">Email</label>
@@ -489,7 +547,7 @@ export default function SignUpForm() {
           <button onClick={handleSubmit}>Sign up</button>
         </form>
       )}
-      {pendingVerification && (
+      {verifying && (
         <div>
           <form>
             <input
@@ -497,7 +555,7 @@ export default function SignUpForm() {
               placeholder="Code..."
               onChange={(e) => setCode(e.target.value)}
             />
-            <button onClick={onPressVerify}>
+            <button onClick={handleVerify}>
               Verify Email
             </button>
           </form>
@@ -520,51 +578,68 @@ export default function SignUpScreen() {
 
   const [emailAddress, setEmailAddress] = React.useState("");
   const [password, setPassword] = React.useState("");
-  const [pendingVerification, setPendingVerification] = React.useState(false);
+  const [verifying, setVerifying] = React.useState(false);
   const [code, setCode] = React.useState("");
 
-  // start the sign up process.
+  // This function will handle the user submitting their email and password
   const onSignUpPress = async () => {
     if (!isLoaded) {
       return;
     }
 
+    // Start the sign-up process using the email and password provided
     try {
       await signUp.create({
         emailAddress,
         password,
       });
 
-      // send the email.
+      // Send the user an email with the verification code
       await signUp.prepareEmailAddressVerification({ strategy: "email_code" });
 
-      // change the UI to our pending section.
-      setPendingVerification(true);
+      // Set 'verifying' true to display second form and capture the OTP code
+      setVerifying(true);
     } catch (err: any) {
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
       console.error(JSON.stringify(err, null, 2));
     }
   };
 
-  // This verifies the user using email code that is delivered.
-  const onPressVerify = async () => {
+  // This function will handle the user submitting a code for verification
+  const handleVerify = async () => {
     if (!isLoaded) {
       return;
     }
 
     try {
+      // Submit the code that the user provides to attempt verification
       const completeSignUp = await signUp.attemptEmailAddressVerification({
         code,
       });
 
-      await setActive({ session: completeSignUp.createdSessionId });
+     if (completeSignUp.status !== "complete") {
+        // The status can also be `abandoned` or `missing_requirements`
+        // Please see https://clerk.com/docs/references/react/use-sign-up#result-status for  more information
+        console.log(JSON.stringify(completeSignUp, null, 2));
+      }
+
+      // Check the status to see if it is complete
+      // If complete, the user has been created -- set the session active
+      if (completeSignUp.status === "complete") {
+        await setActive({ session: completeSignUp.createdSessionId });
+        // Handle your own logic here, like redirecting to a new page if needed.
+      }
     } catch (err: any) {
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
       console.error(JSON.stringify(err, null, 2));
     }
   };
 
   return (
     <View>
-      {!pendingVerification && (
+      {!verifying && (
         <View>
           <View>
             <TextInput
@@ -590,7 +665,7 @@ export default function SignUpScreen() {
           </TouchableOpacity>
         </View>
       )}
-      {pendingVerification && (
+      {verifying && (
         <View>
           <View>
             <TextInput
@@ -599,7 +674,7 @@ export default function SignUpScreen() {
               onChangeText={(code) => setCode(code)}
             />
           </View>
-          <TouchableOpacity onPress={onPressVerify}>
+          <TouchableOpacity onPress={handleVerify}>
             <Text>Verify Email</Text>
           </TouchableOpacity>
         </View>
@@ -665,7 +740,7 @@ export default function SignUpScreen() {
                 const verify = await client.signUp.attemptEmailAddressVerification({
                     code
                 });
-                // user is created now set the session to active this never is not null.
+                // User is created. Now, set the session to active. session is never null.
                 await setActive({session: verify.createdSessionId})
             }
 
@@ -690,7 +765,73 @@ In email/password authentication, the sign-in is a process that requires users t
 <Tabs items={["Next.js","React","Remix", "Gatsby", "Expo", "JavaScript"]}>
 
 <Tab>
-<CodeBlockTabs options={['Pages Router', 'App Router']}>
+<CodeBlockTabs options={['App Router', 'Pages Router']}>
+```tsx  filename="app/sign-in/[[...sign-in]].page.tsx"
+'use client'
+
+import * as React from "react";
+import { useSignIn } from "@clerk/nextjs";
+import { useRouter } from "next/navigation";
+
+export default function SignInForm() {
+  const { isLoaded, signIn, setActive } = useSignIn();
+  const [email, setEmail] = React.useState("");
+  const [password, setPassword] = React.useState("");
+  const router = useRouter();
+
+  // Handle the submission of the sign-in form
+  const handleSubmit = async (e: React.FormEvent) => {
+    e.preventDefault();
+    if (!isLoaded) {
+      return;
+    }
+
+    // Start the sign-in process using the email and password provided
+    try {
+      const completeSignIn = await signIn.create({
+        identifier: email,
+        password,
+      });
+
+      if (completeSignIn.status !== 'complete') {
+        // The status can also be `needs_factor_on', 'needs_factor_two', or 'needs_identifier'
+        // Please see https://clerk.com/docs/references/react/use-sign-in#result-status for  more information
+        console.log(JSON.stringify(completeSignIn, null, 2));
+      }
+
+      if (completeSignIn.status === 'complete') {
+        // If complete, user exists and provided password match -- set session active
+        await setActive({ session: completeSignIn.createdSessionId });
+        // Redirect the user to a post sign-in route
+        router.push('/');
+      }
+    } catch (err: any) {
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
+      console.error(JSON.stringify(err, null, 2));
+    }
+  };
+
+  // Display a form to capture the user's email and password
+  return (
+    <div>
+      <form onSubmit={(e) => handleSubmit(e)}>
+        <div>
+          <label htmlFor="email">Email</label>
+          <input onChange={(e) => setEmail(e.target.value)} id="email" name="email" type="email" value={email} />
+        </div>
+        <div>
+          <label htmlFor="password">Password</label>
+          <input onChange={(e) => setPassword(e.target.value)} id="password" name="password" type="password" value={password} />
+        </div>
+        <button type="submit">Sign In</button>
+      </form>
+    </div>
+  );
+}
+```
+
+
 ```tsx filename="pages/sign-in/[[...index]].tsx"
 import { useState } from "react";
 import { useSignIn } from "@clerk/nextjs";
@@ -701,13 +842,15 @@ export default function SignInForm() {
   const [emailAddress, setEmailAddress] = useState("");
   const [password, setPassword] = useState("");
   const router = useRouter();
-  // start the sign In process.
+
+  // Handle the submission of the sign-in form
   const handleSubmit = async (e) => {
     e.preventDefault();
     if (!isLoaded) {
       return;
     }
 
+    // Start the sign-in process using the email and password provided
     try {
       const result = await signIn.create({
         identifier: emailAddress,
@@ -715,76 +858,24 @@ export default function SignInForm() {
       });
 
       if (result.status === "complete") {
-        console.log(result);
+        // If complete, user exists and provided password match -- set session active
         await setActive({ session: result.createdSessionId });
+        // Redirect the user to a post sign-in route
         router.push("/")
       }
       else {
-        /*Investigate why the login hasn't completed */
-        console.log(result);
+        // The status can also be `needs_factor_on', 'needs_factor_two', or 'needs_identifier'
+        // Please see https://clerk.com/docs/references/react/use-sign-in#result-status for  more information
+        console.error(JSON.stringify(results, null, 2));
       }
-
     } catch (err: any) {
-      console.error("error", err.errors[0].longMessage)
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
+      console.error(JSON.stringify(err, null, 2));
     }
   };
 
-  return (
-    <div>
-      <form>
-        <div>
-          <label htmlFor="email">Email</label>
-          <input onChange={(e) => setEmailAddress(e.target.value)} id="email" name="email" type="email" />
-        </div>
-        <div>
-          <label htmlFor="password">Password</label>
-          <input onChange={(e) => setPassword(e.target.value)} id="password" name="password" type="password" />
-        </div>
-        <button onClick={handleSubmit}>Sign In</button>
-      </form>
-    </div>
-  );
-}
-```
-```tsx filename="app/sign-in/[[...sign-in]].page.tsx"
-"use client"
-import { useState } from "react";
-import { useSignIn } from "@clerk/nextjs";
-import { useRouter } from "next/navigation";
-
-export default function SignInForm() {
-  const { isLoaded, signIn, setActive } = useSignIn();
-  const [emailAddress, setEmailAddress] = useState("");
-  const [password, setPassword] = useState("");
-  const router = useRouter();
-  // start the sign In process.
-  const handleSubmit = async (e) => {
-    e.preventDefault();
-    if (!isLoaded) {
-      return;
-    }
-
-    try {
-      const result = await signIn.create({
-        identifier: emailAddress,
-        password,
-      });
-
-      if (result.status === "complete") {
-        console.log(result);
-        await setActive({ session: result.createdSessionId });
-        router.push("/")
-      }
-      else {
-        /*Investigate why the login hasn't completed */
-        console.log(result);
-      }
-
-    } catch (err: any) {
-      console.error("error", err.errors[0].longMessage)
-    }
-  };
-
+  // Display a form to capture the user's email and password
   return (
     <div>
       <form>
@@ -814,30 +905,36 @@ export default function SignInForm() {
   const { isLoaded, signIn, setActive } = useSignIn();
   const [emailAddress, setEmailAddress] = useState("");
   const [password, setPassword] = useState("");
-  // start the sign In process.
+  
+  // Handle the submission of the sign-in form
   const handleSubmit = async (e) => {
     e.preventDefault();
     if (!isLoaded) {
       return;
     }
 
+    // Start the sign-in process using the email and password provided
     try {
-      const result = await signIn.create({
+      const completeSignIn = await signIn.create({
         identifier: emailAddress,
         password,
       });
 
-      if (result.status === "complete") {
-        await setActive({ session: result.createdSessionId });
-        // redirect the user how you see fit.
-      }
-      else {
-        /*Investigate why the login hasn't completed */
-        console.log(result);
+      if (completeSignIn.status !== 'complete') {
+        // The status can also be `needs_factor_on', 'needs_factor_two', or 'needs_identifier'
+        // Please see https://clerk.com/docs/references/react/use-sign-in#result-status for  more information
+        console.log(JSON.stringify(completeSignIn, null, 2));
       }
 
-    } catch (err: any) {
-      console.error("error", err.errors[0].longMessage)
+      if (completeSignIn.status === "complete") {
+        // If complete, user exists and provided password match -- set session active
+        await setActive({ session: completeSignIn.createdSessionId });
+        // redirect the user how you see fit.
+      }
+    } catch (err: any) { 
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
+      console.error(JSON.stringify(err, null, 2));
     }
   };
 
@@ -869,33 +966,39 @@ export default function SignInForm() {
   const { isLoaded, signIn, setActive } = useSignIn();
   const [emailAddress, setEmailAddress] = useState("");
   const [password, setPassword] = useState("");
-  // start the sign In process.
+  
+  // Start the sign-in process using the email and password provided
   const handleSubmit = async (e) => {
     e.preventDefault();
     if (!isLoaded) {
       return;
     }
 
+    // Start the sign-in process using the email and password provided
     try {
-      const result = await signIn.create({
+      const completeSignIn = await signIn.create({
         identifier: emailAddress,
         password,
       });
 
-      if (result.status === "complete") {
-        await setActive({ session: result.createdSessionId });
-        // redirect the user how you see fit.
-      }
-      else {
-        /*Investigate why the login hasn't completed */
-        console.log(result);
+      if (completeSignIn.status !== 'complete') {
+        // The status can also be `needs_factor_on', 'needs_factor_two', or 'needs_identifier'
+        // Please see https://clerk.com/docs/references/react/use-sign-in#result-status for  more information
+        console.log(JSON.stringify(completeSignIn, null, 2));
       }
 
+      if (completeSignIn.status === 'complete') {
+        // If complete, user exists and provided password match -- set session active
+        await setActive({ session: completeSignIn.createdSessionId });
+      }
     } catch (err: any) {
-      console.error("error", err.errors[0].longMessage)
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
+      console.error(JSON.stringify(err, null, 2));
     }
   };
 
+  // Display a form to capture the user's email and password
   return (
     <div>
       <form>
@@ -925,33 +1028,41 @@ export default function SignInForm() {
   const { isLoaded, signIn, setActive } = useSignIn();
   const [emailAddress, setEmailAddress] = useState("");
   const [password, setPassword] = useState("");
-  // start the sign In process.
+  
+  // Handle the submission of the sign-in form
   const handleSubmit = async (e) => {
     e.preventDefault();
     if (!isLoaded) {
       return;
     }
 
+    // Start the sign-in process using the email and password provided
     try {
-      const result = await signIn.create({
+      const completeSignIn = await signIn.create({
         identifier: emailAddress,
         password,
       });
 
-      if (result.status === "complete") {
-        await setActive({ session: result.createdSessionId });
-        // redirect the user how you see fit.
-      }
-      else {
-        /*Investigate why the login hasn't completed */
-        console.log(result);
+      if (completeSignIn.status !== 'complete') {
+        // The status can also be `needs_factor_on', 'needs_factor_two', or 'needs_identifier'
+        // Please see https://clerk.com/docs/references/react/use-sign-in#result-status for  more information
+        console.log(JSON.stringify(completeSignIn, null, 2));
       }
 
+      if (completeSignIn.status === 'complete') {
+        // If complete, user exists and provided password match -- set session active
+        await setActive({ session: completeSignIn.createdSessionId });
+        // Redirect the user to a post sign-in route
+        router.push('/');
+      }
     } catch (err: any) {
-      console.error("error", err.errors[0].longMessage)
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
+      console.error(JSON.stringify(err, null, 2));
     }
   };
 
+  // Display a form to capture the user's email and password
   return (
     <div>
       <form>
@@ -983,29 +1094,39 @@ export default function SignInScreen() {
   const [emailAddress, setEmailAddress] = React.useState("");
   const [password, setPassword] = React.useState("");
 
+  // Handle the submission of the sign-in form
   const onSignInPress = async () => {
     if (!isLoaded) {
       return;
     }
 
+    // Start the sign-in process using the email and password provided
     try {
       const completeSignIn = await signIn.create({
         identifier: emailAddress,
         password,
       });
-      if (completeSignIn.status === "complete") {
-        await setActive({ session: result.createdSessionId });
-        // redirect the user how you see fit.
-      }
-      else {
-        /*Investigate why the login hasn't completed */
-        console.log(result);
+      
+      if (completeSignIn.status !== 'complete') {
+        // The status can also be `needs_factor_on', 'needs_factor_two', or 'needs_identifier'
+        // Please see https://clerk.com/docs/references/react/use-sign-in#result-status for  more information
+        console.log(JSON.stringify(completeSignIn, null, 2));
       }
 
+      if (completeSignIn.status === 'complete') {
+        // If complete, user exists and provided password match -- set session active
+        await setActive({ session: completeSignIn.createdSessionId });
+        // Redirect the user to a post sign-in route
+        router.push('/');
+      }
     } catch (err: any) {
-      console.log(err);
+      // This can return an array of errors.
+      // See https://clerk.com/docs/custom-flows/error-handling to learn about error handling
+      console.error(JSON.stringify(err, null, 2));
     }
   };
+
+  // Display a form to capture the user's email and password
   return (
     <View>
       <View>
